Fix output overflow

--- a/css/style.css
+++ b/css/style.css
@@ -257,11 +257,16 @@ a:hover h3{
     z-index: -100;
 	display:block;
 	background:#ffffff;
-	position:absolute;
+	position:fixed;
 	top:0px;
 	left:0px;
     width: 100%;
     height: 100%;
+    overflow: none;
+}
+#output{
+    overflow: hidden;
+	position:static;
 }
 .full{
     width: 100%;
